Implement channel types
